// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testFlowParser Flow parser more complex example 1`] = `
{
  "filePath": "x/y",
  "ir": {
    "body": [
      {
        "importKind": "value",
        "leadingComments": [
          {
            "loc": {
              "end": {
                "column": 10,
                "line": 1,
              },
              "source": null,
              "start": {
                "column": 0,
                "line": 1,
              },
            },
            "range": [
              0,
              10,
            ],
            "type": "Line",
            "value": " comment",
          },
        ],
        "loc": {
          "end": {
            "column": 46,
            "line": 2,
          },
          "source": null,
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "range": [
          23,
          57,
        ],
        "source": {
          "loc": {
            "end": {
              "column": 45,
              "line": 2,
            },
            "source": null,
            "start": {
              "column": 28,
              "line": 2,
            },
          },
          "range": [
            39,
            56,
          ],
          "raw": "'../src/index.js'",
          "type": "Literal",
          "value": "../src/index.js",
        },
        "specifiers": [
          {
            "loc": {
              "end": {
                "column": 22,
                "line": 2,
              },
              "source": null,
              "start": {
                "column": 19,
                "line": 2,
              },
            },
            "local": {
              "loc": {
                "end": {
                  "column": 22,
                  "line": 2,
                },
                "source": null,
                "start": {
                  "column": 19,
                  "line": 2,
                },
              },
              "name": "foo",
              "optional": false,
              "range": [
                30,
                33,
              ],
              "type": "Identifier",
              "typeAnnotation": null,
            },
            "range": [
              30,
              33,
            ],
            "type": "ImportDefaultSpecifier",
          },
        ],
        "type": "ImportDeclaration",
      },
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 29,
                  "line": 4,
                },
                "source": null,
                "start": {
                  "column": 18,
                  "line": 4,
                },
              },
              "name": "str",
              "optional": false,
              "range": [
                77,
                88,
              ],
              "type": "Identifier",
              "typeAnnotation": {
                "loc": {
                  "end": {
                    "column": 29,
                    "line": 4,
                  },
                  "source": null,
                  "start": {
                    "column": 21,
                    "line": 4,
                  },
                },
                "range": [
                  80,
                  88,
                ],
                "type": "TypeAnnotation",
                "typeAnnotation": {
                  "loc": {
                    "end": {
                      "column": 29,
                      "line": 4,
                    },
                    "source": null,
                    "start": {
                      "column": 23,
                      "line": 4,
                    },
                  },
                  "range": [
                    82,
                    88,
                  ],
                  "type": "StringTypeAnnotation",
                },
              },
            },
            "init": {
              "loc": {
                "end": {
                  "column": 40,
                  "line": 4,
                },
                "source": null,
                "start": {
                  "column": 32,
                  "line": 4,
                },
              },
              "range": [
                91,
                99,
              ],
              "raw": ""String"",
              "type": "Literal",
              "value": "String",
            },
            "loc": {
              "end": {
                "column": 40,
                "line": 4,
              },
              "source": null,
              "start": {
                "column": 18,
                "line": 4,
              },
            },
            "range": [
              77,
              99,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 41,
            "line": 4,
          },
          "source": null,
          "start": {
            "column": 12,
            "line": 4,
          },
        },
        "range": [
          71,
          100,
        ],
        "type": "VariableDeclaration",
      },
      {
        "declaration": {
          "loc": {
            "end": {
              "column": 30,
              "line": 6,
            },
            "source": null,
            "start": {
              "column": 27,
              "line": 6,
            },
          },
          "name": "str",
          "optional": false,
          "range": [
            129,
            132,
          ],
          "type": "Identifier",
          "typeAnnotation": null,
        },
        "exportKind": "value",
        "loc": {
          "end": {
            "column": 31,
            "line": 6,
          },
          "source": null,
          "start": {
            "column": 12,
            "line": 6,
          },
        },
        "range": [
          114,
          133,
        ],
        "type": "ExportDefaultDeclaration",
      },
    ],
    "comments": [
      {
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
          },
          "source": null,
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          10,
        ],
        "type": "Line",
        "value": " comment",
      },
    ],
    "errors": [],
    "loc": {
      "end": {
        "column": 31,
        "line": 6,
      },
      "source": null,
      "start": {
        "column": 12,
        "line": 2,
      },
    },
    "range": [
      23,
      133,
    ],
    "type": "Program",
  },
  "type": "ast-jstree",
}
`;

exports[`testFlowParser Flow parser simple 1`] = `
{
  "filePath": "x/y",
  "ir": {
    "body": [
      {
        "importKind": "value",
        "loc": {
          "end": {
            "column": 46,
            "line": 2,
          },
          "source": null,
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "range": [
          21,
          55,
        ],
        "source": {
          "loc": {
            "end": {
              "column": 45,
              "line": 2,
            },
            "source": null,
            "start": {
              "column": 28,
              "line": 2,
            },
          },
          "range": [
            37,
            54,
          ],
          "raw": "'../src/index.js'",
          "type": "Literal",
          "value": "../src/index.js",
        },
        "specifiers": [
          {
            "loc": {
              "end": {
                "column": 22,
                "line": 2,
              },
              "source": null,
              "start": {
                "column": 19,
                "line": 2,
              },
            },
            "local": {
              "loc": {
                "end": {
                  "column": 22,
                  "line": 2,
                },
                "source": null,
                "start": {
                  "column": 19,
                  "line": 2,
                },
              },
              "name": "foo",
              "optional": false,
              "range": [
                28,
                31,
              ],
              "type": "Identifier",
              "typeAnnotation": null,
            },
            "range": [
              28,
              31,
            ],
            "type": "ImportDefaultSpecifier",
          },
        ],
        "type": "ImportDeclaration",
      },
      {
        "declaration": {
          "async": false,
          "body": {
            "body": [
              {
                "argument": {
                  "arguments": [
                    {
                      "loc": {
                        "end": {
                          "column": 32,
                          "line": 4,
                        },
                        "source": null,
                        "start": {
                          "column": 27,
                          "line": 4,
                        },
                      },
                      "range": [
                        142,
                        147,
                      ],
                      "raw": "'x/y'",
                      "type": "Literal",
                      "value": "x/y",
                    },
                  ],
                  "callee": {
                    "loc": {
                      "end": {
                        "column": 26,
                        "line": 4,
                      },
                      "source": null,
                      "start": {
                        "column": 23,
                        "line": 4,
                      },
                    },
                    "name": "foo",
                    "optional": false,
                    "range": [
                      138,
                      141,
                    ],
                    "type": "Identifier",
                    "typeAnnotation": null,
                  },
                  "loc": {
                    "end": {
                      "column": 33,
                      "line": 4,
                    },
                    "source": null,
                    "start": {
                      "column": 23,
                      "line": 4,
                    },
                  },
                  "range": [
                    138,
                    148,
                  ],
                  "type": "CallExpression",
                  "typeArguments": null,
                },
                "loc": {
                  "end": {
                    "column": 34,
                    "line": 4,
                  },
                  "source": null,
                  "start": {
                    "column": 16,
                    "line": 4,
                  },
                },
                "range": [
                  131,
                  149,
                ],
                "type": "ReturnStatement",
              },
            ],
            "loc": {
              "end": {
                "column": 13,
                "line": 5,
              },
              "source": null,
              "start": {
                "column": 57,
                "line": 3,
              },
            },
            "range": [
              113,
              163,
            ],
            "type": "BlockStatement",
          },
          "expression": false,
          "generator": false,
          "id": {
            "loc": {
              "end": {
                "column": 46,
                "line": 3,
              },
              "source": null,
              "start": {
                "column": 36,
                "line": 3,
              },
            },
            "name": "pathToFile",
            "optional": false,
            "range": [
              92,
              102,
            ],
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "loc": {
            "end": {
              "column": 13,
              "line": 5,
            },
            "source": null,
            "start": {
              "column": 27,
              "line": 3,
            },
          },
          "params": [],
          "predicate": null,
          "range": [
            83,
            163,
          ],
          "returnType": {
            "loc": {
              "end": {
                "column": 56,
                "line": 3,
              },
              "source": null,
              "start": {
                "column": 48,
                "line": 3,
              },
            },
            "range": [
              104,
              112,
            ],
            "type": "TypeAnnotation",
            "typeAnnotation": {
              "loc": {
                "end": {
                  "column": 56,
                  "line": 3,
                },
                "source": null,
                "start": {
                  "column": 50,
                  "line": 3,
                },
              },
              "range": [
                106,
                112,
              ],
              "type": "StringTypeAnnotation",
            },
          },
          "type": "FunctionDeclaration",
          "typeParameters": null,
        },
        "exportKind": "value",
        "loc": {
          "end": {
            "column": 13,
            "line": 5,
          },
          "source": null,
          "start": {
            "column": 12,
            "line": 3,
          },
        },
        "range": [
          68,
          163,
        ],
        "type": "ExportDefaultDeclaration",
      },
    ],
    "comments": [
      {
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
          },
          "source": null,
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          8,
        ],
        "type": "Line",
        "value": " @flow",
      },
    ],
    "errors": [],
    "leadingComments": [
      {
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
          },
          "source": null,
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          8,
        ],
        "type": "Line",
        "value": " @flow",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 5,
      },
      "source": null,
      "start": {
        "column": 12,
        "line": 2,
      },
    },
    "range": [
      21,
      163,
    ],
    "type": "Program",
  },
  "type": "ast-jstree",
}
`;

exports[`testFlowParser JS flow parse of real file 1`] = `
[
  IntermediateRepresentation {
    "filePath": "./test/testfiles/testfile3.js",
    "ir": {
      "body": [
        {
          "importKind": "value",
          "loc": {
            "end": {
              "column": 31,
              "line": 2,
            },
            "source": null,
            "start": {
              "column": 0,
              "line": 2,
            },
          },
          "range": [
            9,
            40,
          ],
          "source": {
            "loc": {
              "end": {
                "column": 30,
                "line": 2,
              },
              "source": null,
              "start": {
                "column": 23,
                "line": 2,
              },
            },
            "range": [
              32,
              39,
            ],
            "raw": "'react'",
            "type": "Literal",
            "value": "react",
          },
          "specifiers": [
            {
              "loc": {
                "end": {
                  "column": 17,
                  "line": 2,
                },
                "source": null,
                "start": {
                  "column": 7,
                  "line": 2,
                },
              },
              "local": {
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 2,
                  },
                  "source": null,
                  "start": {
                    "column": 12,
                    "line": 2,
                  },
                },
                "name": "React",
                "optional": false,
                "range": [
                  21,
                  26,
                ],
                "type": "Identifier",
                "typeAnnotation": null,
              },
              "range": [
                16,
                26,
              ],
              "type": "ImportNamespaceSpecifier",
            },
          ],
          "type": "ImportDeclaration",
        },
        {
          "body": {
            "body": [
              {
                "computed": false,
                "decorators": [],
                "key": {
                  "loc": {
                    "end": {
                      "column": 19,
                      "line": 5,
                    },
                    "source": null,
                    "start": {
                      "column": 4,
                      "line": 5,
                    },
                  },
                  "name": "getSourceString",
                  "optional": false,
                  "range": [
                    92,
                    107,
                  ],
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "kind": "method",
                "loc": {
                  "end": {
                    "column": 5,
                    "line": 7,
                  },
                  "source": null,
                  "start": {
                    "column": 4,
                    "line": 5,
                  },
                },
                "range": [
                  92,
                  162,
                ],
                "static": false,
                "type": "MethodDefinition",
                "value": {
                  "async": false,
                  "body": {
                    "body": [
                      {
                        "argument": {
                          "computed": false,
                          "loc": {
                            "end": {
                              "column": 35,
                              "line": 6,
                            },
                            "source": null,
                            "start": {
                              "column": 15,
                              "line": 6,
                            },
                          },
                          "object": {
                            "loc": {
                              "end": {
                                "column": 19,
                                "line": 6,
                              },
                              "source": null,
                              "start": {
                                "column": 15,
                                "line": 6,
                              },
                            },
                            "range": [
                              135,
                              139,
                            ],
                            "type": "ThisExpression",
                          },
                          "property": {
                            "loc": {
                              "end": {
                                "column": 35,
                                "line": 6,
                              },
                              "source": null,
                              "start": {
                                "column": 20,
                                "line": 6,
                              },
                            },
                            "name": "getSourceString",
                            "optional": false,
                            "range": [
                              140,
                              155,
                            ],
                            "type": "Identifier",
                            "typeAnnotation": null,
                          },
                          "range": [
                            135,
                            155,
                          ],
                          "type": "MemberExpression",
                        },
                        "loc": {
                          "end": {
                            "column": 36,
                            "line": 6,
                          },
                          "source": null,
                          "start": {
                            "column": 8,
                            "line": 6,
                          },
                        },
                        "range": [
                          128,
                          156,
                        ],
                        "type": "ReturnStatement",
                      },
                    ],
                    "loc": {
                      "end": {
                        "column": 5,
                        "line": 7,
                      },
                      "source": null,
                      "start": {
                        "column": 30,
                        "line": 5,
                      },
                    },
                    "range": [
                      118,
                      162,
                    ],
                    "type": "BlockStatement",
                  },
                  "expression": false,
                  "generator": false,
                  "id": null,
                  "loc": {
                    "end": {
                      "column": 5,
                      "line": 7,
                    },
                    "source": null,
                    "start": {
                      "column": 19,
                      "line": 5,
                    },
                  },
                  "params": [],
                  "predicate": null,
                  "range": [
                    107,
                    162,
                  ],
                  "returnType": {
                    "loc": {
                      "end": {
                        "column": 29,
                        "line": 5,
                      },
                      "source": null,
                      "start": {
                        "column": 21,
                        "line": 5,
                      },
                    },
                    "range": [
                      109,
                      117,
                    ],
                    "type": "TypeAnnotation",
                    "typeAnnotation": {
                      "loc": {
                        "end": {
                          "column": 29,
                          "line": 5,
                        },
                        "source": null,
                        "start": {
                          "column": 23,
                          "line": 5,
                        },
                      },
                      "range": [
                        111,
                        117,
                      ],
                      "type": "StringTypeAnnotation",
                    },
                  },
                  "type": "FunctionExpression",
                  "typeParameters": null,
                },
              },
              {
                "computed": false,
                "decorators": [],
                "key": {
                  "loc": {
                    "end": {
                      "column": 10,
                      "line": 9,
                    },
                    "source": null,
                    "start": {
                      "column": 4,
                      "line": 9,
                    },
                  },
                  "name": "render",
                  "optional": false,
                  "range": [
                    168,
                    174,
                  ],
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "kind": "method",
                "loc": {
                  "end": {
                    "column": 5,
                    "line": 11,
                  },
                  "source": null,
                  "start": {
                    "column": 4,
                    "line": 9,
                  },
                },
                "range": [
                  168,
                  243,
                ],
                "static": false,
                "type": "MethodDefinition",
                "value": {
                  "async": false,
                  "body": {
                    "body": [
                      {
                        "argument": {
                          "computed": false,
                          "loc": {
                            "end": {
                              "column": 34,
                              "line": 10,
                            },
                            "source": null,
                            "start": {
                              "column": 15,
                              "line": 10,
                            },
                          },
                          "object": {
                            "computed": false,
                            "loc": {
                              "end": {
                                "column": 25,
                                "line": 10,
                              },
                              "source": null,
                              "start": {
                                "column": 15,
                                "line": 10,
                              },
                            },
                            "object": {
                              "loc": {
                                "end": {
                                  "column": 19,
                                  "line": 10,
                                },
                                "source": null,
                                "start": {
                                  "column": 15,
                                  "line": 10,
                                },
                              },
                              "range": [
                                217,
                                221,
                              ],
                              "type": "ThisExpression",
                            },
                            "property": {
                              "loc": {
                                "end": {
                                  "column": 25,
                                  "line": 10,
                                },
                                "source": null,
                                "start": {
                                  "column": 20,
                                  "line": 10,
                                },
                              },
                              "name": "props",
                              "optional": false,
                              "range": [
                                222,
                                227,
                              ],
                              "type": "Identifier",
                              "typeAnnotation": null,
                            },
                            "range": [
                              217,
                              227,
                            ],
                            "type": "MemberExpression",
                          },
                          "property": {
                            "loc": {
                              "end": {
                                "column": 34,
                                "line": 10,
                              },
                              "source": null,
                              "start": {
                                "column": 26,
                                "line": 10,
                              },
                            },
                            "name": "children",
                            "optional": false,
                            "range": [
                              228,
                              236,
                            ],
                            "type": "Identifier",
                            "typeAnnotation": null,
                          },
                          "range": [
                            217,
                            236,
                          ],
                          "type": "MemberExpression",
                        },
                        "loc": {
                          "end": {
                            "column": 35,
                            "line": 10,
                          },
                          "source": null,
                          "start": {
                            "column": 8,
                            "line": 10,
                          },
                        },
                        "range": [
                          210,
                          237,
                        ],
                        "type": "ReturnStatement",
                      },
                    ],
                    "loc": {
                      "end": {
                        "column": 5,
                        "line": 11,
                      },
                      "source": null,
                      "start": {
                        "column": 36,
                        "line": 9,
                      },
                    },
                    "range": [
                      200,
                      243,
                    ],
                    "type": "BlockStatement",
                  },
                  "expression": false,
                  "generator": false,
                  "id": null,
                  "loc": {
                    "end": {
                      "column": 5,
                      "line": 11,
                    },
                    "source": null,
                    "start": {
                      "column": 10,
                      "line": 9,
                    },
                  },
                  "params": [],
                  "predicate": null,
                  "range": [
                    174,
                    243,
                  ],
                  "returnType": {
                    "loc": {
                      "end": {
                        "column": 35,
                        "line": 9,
                      },
                      "source": null,
                      "start": {
                        "column": 13,
                        "line": 9,
                      },
                    },
                    "range": [
                      177,
                      199,
                    ],
                    "type": "TypeAnnotation",
                    "typeAnnotation": {
                      "id": {
                        "loc": {
                          "end": {
                            "column": 20,
                            "line": 9,
                          },
                          "source": null,
                          "start": {
                            "column": 15,
                            "line": 9,
                          },
                        },
                        "name": "Array",
                        "optional": false,
                        "range": [
                          179,
                          184,
                        ],
                        "type": "Identifier",
                        "typeAnnotation": null,
                      },
                      "loc": {
                        "end": {
                          "column": 35,
                          "line": 9,
                        },
                        "source": null,
                        "start": {
                          "column": 15,
                          "line": 9,
                        },
                      },
                      "range": [
                        179,
                        199,
                      ],
                      "type": "GenericTypeAnnotation",
                      "typeParameters": {
                        "loc": {
                          "end": {
                            "column": 35,
                            "line": 9,
                          },
                          "source": null,
                          "start": {
                            "column": 20,
                            "line": 9,
                          },
                        },
                        "params": [
                          {
                            "id": {
                              "id": {
                                "loc": {
                                  "end": {
                                    "column": 34,
                                    "line": 9,
                                  },
                                  "source": null,
                                  "start": {
                                    "column": 27,
                                    "line": 9,
                                  },
                                },
                                "name": "Element",
                                "optional": false,
                                "range": [
                                  191,
                                  198,
                                ],
                                "type": "Identifier",
                                "typeAnnotation": null,
                              },
                              "loc": {
                                "end": {
                                  "column": 34,
                                  "line": 9,
                                },
                                "source": null,
                                "start": {
                                  "column": 21,
                                  "line": 9,
                                },
                              },
                              "qualification": {
                                "loc": {
                                  "end": {
                                    "column": 26,
                                    "line": 9,
                                  },
                                  "source": null,
                                  "start": {
                                    "column": 21,
                                    "line": 9,
                                  },
                                },
                                "name": "React",
                                "optional": false,
                                "range": [
                                  185,
                                  190,
                                ],
                                "type": "Identifier",
                                "typeAnnotation": null,
                              },
                              "range": [
                                185,
                                198,
                              ],
                              "type": "QualifiedTypeIdentifier",
                            },
                            "loc": {
                              "end": {
                                "column": 34,
                                "line": 9,
                              },
                              "source": null,
                              "start": {
                                "column": 21,
                                "line": 9,
                              },
                            },
                            "range": [
                              185,
                              198,
                            ],
                            "type": "GenericTypeAnnotation",
                            "typeParameters": null,
                          },
                        ],
                        "range": [
                          184,
                          199,
                        ],
                        "type": "TypeParameterInstantiation",
                      },
                    },
                  },
                  "type": "FunctionExpression",
                  "typeParameters": null,
                },
              },
            ],
            "loc": {
              "end": {
                "column": 1,
                "line": 12,
              },
              "source": null,
              "start": {
                "column": 44,
                "line": 4,
              },
            },
            "range": [
              86,
              245,
            ],
            "type": "ClassBody",
          },
          "decorators": [],
          "id": {
            "loc": {
              "end": {
                "column": 12,
                "line": 4,
              },
              "source": null,
              "start": {
                "column": 6,
                "line": 4,
              },
            },
            "name": "Plural",
            "optional": false,
            "range": [
              48,
              54,
            ],
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "implements": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 12,
            },
            "source": null,
            "start": {
              "column": 0,
              "line": 4,
            },
          },
          "range": [
            42,
            245,
          ],
          "superClass": {
            "computed": false,
            "loc": {
              "end": {
                "column": 36,
                "line": 4,
              },
              "source": null,
              "start": {
                "column": 21,
                "line": 4,
              },
            },
            "object": {
              "loc": {
                "end": {
                  "column": 26,
                  "line": 4,
                },
                "source": null,
                "start": {
                  "column": 21,
                  "line": 4,
                },
              },
              "name": "React",
              "optional": false,
              "range": [
                63,
                68,
              ],
              "type": "Identifier",
              "typeAnnotation": null,
            },
            "property": {
              "loc": {
                "end": {
                  "column": 36,
                  "line": 4,
                },
                "source": null,
                "start": {
                  "column": 27,
                  "line": 4,
                },
              },
              "name": "Component",
              "optional": false,
              "range": [
                69,
                78,
              ],
              "type": "Identifier",
              "typeAnnotation": null,
            },
            "range": [
              63,
              78,
            ],
            "type": "MemberExpression",
          },
          "superTypeParameters": {
            "loc": {
              "end": {
                "column": 43,
                "line": 4,
              },
              "source": null,
              "start": {
                "column": 36,
                "line": 4,
              },
            },
            "params": [
              {
                "id": {
                  "loc": {
                    "end": {
                      "column": 42,
                      "line": 4,
                    },
                    "source": null,
                    "start": {
                      "column": 37,
                      "line": 4,
                    },
                  },
                  "name": "Props",
                  "optional": false,
                  "range": [
                    79,
                    84,
                  ],
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "loc": {
                  "end": {
                    "column": 42,
                    "line": 4,
                  },
                  "source": null,
                  "start": {
                    "column": 37,
                    "line": 4,
                  },
                },
                "range": [
                  79,
                  84,
                ],
                "type": "GenericTypeAnnotation",
                "typeParameters": null,
              },
            ],
            "range": [
              78,
              85,
            ],
            "type": "TypeParameterInstantiation",
          },
          "type": "ClassDeclaration",
          "typeParameters": null,
        },
        {
          "declaration": {
            "loc": {
              "end": {
                "column": 21,
                "line": 14,
              },
              "source": null,
              "start": {
                "column": 15,
                "line": 14,
              },
            },
            "name": "Plural",
            "optional": false,
            "range": [
              262,
              268,
            ],
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "exportKind": "value",
          "loc": {
            "end": {
              "column": 22,
              "line": 14,
            },
            "source": null,
            "start": {
              "column": 0,
              "line": 14,
            },
          },
          "range": [
            247,
            269,
          ],
          "type": "ExportDefaultDeclaration",
        },
      ],
      "comments": [
        {
          "loc": {
            "end": {
              "column": 8,
              "line": 1,
            },
            "source": null,
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "range": [
            0,
            8,
          ],
          "type": "Line",
          "value": " @flow",
        },
      ],
      "errors": [],
      "leadingComments": [
        {
          "loc": {
            "end": {
              "column": 8,
              "line": 1,
            },
            "source": null,
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "range": [
            0,
            8,
          ],
          "type": "Line",
          "value": " @flow",
        },
      ],
      "loc": {
        "end": {
          "column": 22,
          "line": 14,
        },
        "source": null,
        "start": {
          "column": 0,
          "line": 2,
        },
      },
      "range": [
        9,
        269,
      ],
      "type": "Program",
    },
    "stats": undefined,
    "type": "ast-jstree",
  },
  IntermediateRepresentation {
    "filePath": "./test/testfiles/testfile3.js",
    "ir": "// @flow
import * as React from 'react';

class Plural extends React.Component<Props> {
    getSourceString(): string {
        return this.getSourceString;
    }

    render() : Array<React.Element> {
        return this.props.children;
    }
}

export default Plural;",
    "stats": undefined,
    "type": "string",
  },
]
`;
